# serializer version: 1
# name: test_sensor
  ReadOnlyDict({
    <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by https://www.tankerkoenig.de',
    'brand': 'Station',
    'city': 'Somewhere',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Station Somewhere Street 1 Super E10',
    'fuel_type': <GasType.E10: 'e10'>,
    'house_number': '1',
    <EntityStateAttribute.LATITUDE: 'latitude'>: 51.1,
    <EntityStateAttribute.LONGITUDE: 'longitude'>: 13.1,
    'postcode': 1234,
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'station_name': 'Station ABC',
    'street': 'Somewhere Street',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '€',
  })
# ---
# name: test_sensor.1
  ReadOnlyDict({
    <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by https://www.tankerkoenig.de',
    'brand': 'Station',
    'city': 'Somewhere',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Station Somewhere Street 1 Super',
    'fuel_type': <GasType.E5: 'e5'>,
    'house_number': '1',
    <EntityStateAttribute.LATITUDE: 'latitude'>: 51.1,
    <EntityStateAttribute.LONGITUDE: 'longitude'>: 13.1,
    'postcode': 1234,
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'station_name': 'Station ABC',
    'street': 'Somewhere Street',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '€',
  })
# ---
# name: test_sensor.2
  ReadOnlyDict({
    <EntityStateAttribute.ATTRIBUTION: 'attribution'>: 'Data provided by https://www.tankerkoenig.de',
    'brand': 'Station',
    'city': 'Somewhere',
    <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Station Somewhere Street 1 Diesel',
    'fuel_type': <GasType.DIESEL: 'diesel'>,
    'house_number': '1',
    <EntityStateAttribute.LATITUDE: 'latitude'>: 51.1,
    <EntityStateAttribute.LONGITUDE: 'longitude'>: 13.1,
    'postcode': 1234,
    <SensorEntityCapabilityAttribute.STATE_CLASS: 'state_class'>: <SensorStateClass.MEASUREMENT: 'measurement'>,
    'station_name': 'Station ABC',
    'street': 'Somewhere Street',
    <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '€',
  })
# ---
